fix width collapse

--- a/src/components/collapse/collapse.css
+++ b/src/components/collapse/collapse.css
@@ -19,7 +19,7 @@
 
 .collapse-content {
     flex-direction: column;
-    /* width: 79%; */
+    width: 100%;
     padding: 5px;
     margin-bottom: 10px;
     background-color: #F6F6F6;
@@ -128,10 +128,6 @@
 
     .collapse {
         margin-bottom: 0px;
-    }
-
-    .collapse-content {
-        width: 79%;
     }
 }
 
